2005-03-08  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/session.py:
	Fixed lack of calling SessionResource with all args.

	* src/legacy/glue.py:
	Repaired resourceOffline typo.

2005-03-07  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Altered utf8encode to use tests offered by Florian.

2005-03-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Killed unnecessary error report.

	* src/main.py:
	* src/session.py:
	* src/register.py:
	* src/legacy/aimt.py:
	* src/legacy/glue.py:
	* src/xmlconfig.py:
	* src/config.py:
	* src/jabw.py:
	Applied some of James's PyMSNt 0.9.1 patches.

2005-03-03  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Added observer for stream errors.

2005-03-02  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	* src/tlib/socks5.py:
	* src/tlib/sockserror.py:
	* src/legacy/icqt.py:
	* config_example.xml:
	* src/config.py:
	* AUTHORS:
	Applied Daniel Chandran's socks patches.

2005-02-27  Daniel Henninger  <jadestorm@nc.rr.com>

	* AUTHORS:
	Added Chris.

	* src/tlib/oscar.py:
	Added Chris Carlin's threading patch.

	* src/disco.py:
	Applied Florian's error IQ patch.

2005-02-23  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	Added lang import.

	* src/jabw.py:
	Added check in error type handler.

2005-02-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	* src/debug.py:
	* src/main.py:
	* src/misciq.py:
	* src/disco.py:
	* src/register.py:
	* src/config.py:
	* config_example.xml:
	* src/xdb.py:
	Updated with PyMSN changes between 0.8 and 0.9.

	* src/utils.py:
	Added doPath function.

	* PyICQt:
	* src/main.py:
	Removed most of wrapper script and added internal pid handling.

	* src/tests:
	Removed since I don't use it.

	* src/main.py:
	Switched to auto-restart with proper process name.

	* config_example.xml:
	Adjusted to change the way sessionGreeting is handled.

	* src/lang.py:
	Removed all sessiongreeting references.
